# operator-release

operator_for_linux/: LICENSE  OPERATOR.md  README.md  setup.sh  start_db.sh  start_operator.sh  start_redis.sh
operator_for_linux/config/configuration/bitcoin_rpc/: dev.yaml  local.yaml  signet.yaml  testnet4.yaml
operator_for_linux/config/configuration/health_check/: dev.yaml  local.yaml  signet.yaml  testnet4.yaml
operator_for_linux/dal/: .env.example  Cargo.toml  ER_diagram.md  docker-compose.yml
operator_for_linux/dal/migrations/: 20250208064950_init.down.sql  20250208064950_init.up.sql  20250325092856_add_operator_nonce.down.sql  20250325092856_add_operator_nonce.up.sql  20250326093301_add_operator_winternitz.down.sql  20250326093301_add_operator_winternitz.up.sql  20250401093810_add_pegin_task_wt_key.down.sql  20250401093810_add_pegin_task_wt_key.up.sql  20250415063015_add_operator_stake_unstake_tx.down.sql  20250415063015_add_operator_stake_unstake_tx.up.sql  20250508084714_add_presign_tx_feerate.down.sql  20250508084714_add_presign_tx_feerate.up.sql  20250529003604_add_operator_pegout_fee_info.down.sql  20250529003604_add_operator_pegout_fee_info.up.sql  20250616081703_add_pegin_task_income_expense.down.sql  20250616081703_add_pegin_task_income_expense.up.sql  20250616094609_create_operator_connections.down.sql  20250616094609_create_operator_connections.up.sql  20250616094751_create_operator_split_tasks.down.sql  20250616094751_create_operator_split_tasks.up.sql
operator_for_linux/dal/scripts/: init_main_db.sh  migrations.sh
(+4 files in other folders)
