[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
logs = { path = "../logs" }
types = { path = "../types" }
config = { path = "../config" }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
